--- a/ink_talk/pubspec.yaml
+++ b/ink_talk/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
   google_sign_in: ^6.2.2
+  provider: ^6.1.2
+  go_router: ^14.6.2
 
 dev_dependencies:
   flutter_test:
