연락처 동기화 기능 추가
- flutter_contacts, permission_handler 패키지 추가
- ContactService 생성 (연락처 읽기, INK 가입자 찾기)
- ContactSyncScreen 생성 (권한 요청, 친구 추천 목록)
- UserModel에 phoneNumber 필드 추가
- Android/iOS 연락처 권한 설정

--- a/ink_talk/android/app/src/main/AndroidManifest.xml
+++ b/ink_talk/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 연락처 읽기 권한 -->
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    
     <application
         android:label="ink_app"
         android:name="${applicationName}"
