--- a/ink_talk/pubspec.yaml
+++ b/ink_talk/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cloud_firestore: ^6.1.2
   provider: ^6.1.2
   go_router: ^14.6.2
+  flutter_contacts: ^1.1.9+2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
