--- a/ink_talk/pubspec.yaml
+++ b/ink_talk/pubspec.yaml
@@ -38,10 +38,14 @@ dependencies:
   firebase_auth: ^6.1.4
   google_sign_in: ^6.2.2
   cloud_firestore: ^6.1.2
+  firebase_storage: ^13.0.1
   provider: ^6.1.2
   go_router: ^14.6.2
   flutter_contacts: ^1.1.9+2
   permission_handler: ^11.3.1
+  image_picker: ^1.1.2
+  file_picker: ^8.1.7
+  video_player: ^2.9.3
 
 dev_dependencies:
   flutter_test:
