--- a/ink_talk/pubspec.yaml
+++ b/ink_talk/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^8.1.7
   video_player: ^2.9.3
+  share_plus: ^10.1.4
+  pdf: ^3.11.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
