--- a/ink_talk/ios/Runner/Info.plist
+++ b/ink_talk/ios/Runner/Info.plist
@@ -45,6 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- iPad 분할 화면 시 창 크기 변경에 따라 레이아웃이 반응합니다. 별도 Scene 설정 없이 단일 윈도우로 동작합니다. -->
 	<key>NSContactsUsageDescription</key>
 	<string>친구 추천을 위해 연락처에 접근합니다. 연락처 정보는 INK 가입자 확인에만 사용됩니다.</string>
 </dict>
