--- a/ink_talk/pubspec.yaml
+++ b/ink_talk/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   share_plus: ^10.1.4
   pdf: ^3.11.2
   path_provider: ^2.1.5
+  shared_preferences: ^2.3.3
+  connectivity_plus: ^6.1.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
